changes in eds blogs added p tgas in necessary places

--- a/blogs/Adding-metadata-in-Edge-Delivery-Services.html
+++ b/blogs/Adding-metadata-in-Edge-Delivery-Services.html
@@ -61,8 +61,8 @@
             <p>metadata refers to the information embedded in a webpage or associated with its content that describes its characteristics, purpose, and other properties. Metadata is not typically visible to users but plays a crucial role in how search engines, browsers, and other systems interpret and interact with the webpage.</p>
             <p>Metadata to the page can be added in two ways</p>
             <ol>
-               <li>Using Block- use to add `page level metadata</li>
-               <li>Using Google sheet or excel- this is for site level or used for bulk metadata</li>
+               <li><p>Using Block- use to add `page level metadata.</p></li>
+               <li><p>Using Google sheet or excel- this is for site level or used for bulk metadata.</p></li>
             </ol>
             <h3 style="text-align: left;">Using Block</h3>
             <p>To add metadata in page we need to add block to the page called metadata block it is a special block that is handled by HTML rendering service internally to add"meta tags in head of HTML structure.</p>
@@ -79,15 +79,15 @@
             <p>When we wanted to add metadata for particular hierarchy/pages under particular folder or we wanted to add metadata in bulk then in that case we use excel sheet to add metadata.</p>
             <h3 style="text-align: left;">Steps to add metadata using excel</h3>
             <ul class="ff_ul">
-               <li>So, to add the metadata using google sheet of excel we need to create a excel file with name metadata under the root folder meaning under the main folder where all the project files are kept.</li>
+               <li><p>So, to add the metadata using google sheet of excel we need to create a excel file with name metadata under the root folder meaning under the main folder where all the project files are kept.</p></li>
                <div class="image-container">
                <img src="../images/Adding-Metadata/metadata-sheet-name.webp" style="width: 70%;  margin-top: 15px;" alt="metadata-sheet-name"/>
                </div>
-            <li>Inside the file we need to create a column called URL where we will define on which hierarchy metadata should be applied. And other columns will be the meta tags that you wanted to apply and their values.</li>
+            <li><p>Inside the file we need to create a column called URL where we will define on which hierarchy metadata should be applied. And other columns will be the meta tags that you wanted to apply and their values.</p></li>
             <div class="image-container">
                <img src="../images/Adding-Metadata/metadata-excel-properties.webp" style="width: 70%;  margin-top: 15px;" alt="metadata-excel-properties"/>
                </div>
-               <li>If ** then it will apply on all the pages and if you want to apply those meta tags only the pages which is under some folder for e.g. /cms/ then you need to define as shown above in the image.</li>
+               <li><p>If ** then it will apply on all the pages and if you want to apply those meta tags only the pages which is under some folder for e.g. /cms/ then you need to define as shown above in the image.</p></li>
                <p style="background-color: rgb(255, 255, 129); padding: 10px;">
                  Note: Now if you have applied any meta tag let say "Theme" using metadata block and also applied using google sheet then in that case metadata block will be given priority.
                </p>
@@ -96,7 +96,7 @@
                </div>
             </ul>
             <p>As you can see the metadata properties have been added to the pages</p>
-            <p>Thanks fo reading 😄</p>
+            <p>Thanks for reading 😄</p>
          </div>
          </div>
          <hr style="margin-top: 30px;"/>
