--- a/blogs/Blocks-Creation-In-Edge-Delivery-Services.html
+++ b/blogs/Blocks-Creation-In-Edge-Delivery-Services.html
@@ -68,7 +68,7 @@
             </div>
             <p>So to create the above Block we will follow the below steps</p>
             <ol class="ff_ul" style="padding: 10px;">
-               <li>First of all we need to create table in the document where we need to add the block in the below manner</li>
+               <li><p>First of all we need to create table in the document where we need to add the block in the below manner</p></li>
                <div class="image-container">
                <img src="../images/Blocks-In-EDS/Cards-Table.webp" style="width: 40%;  margin-top: 15px;" alt="cards-table"/>
                </div>
@@ -76,19 +76,19 @@
                <div class="image-container">
                <img src="../images/Blocks-In-EDS/Out-of-the-box-dom.webp" style="width: 70%;  margin-top: 15px;" alt="Out-of-the-box-dom"/>
                </div>
-               <li>Now we need to rewrite this Dom structure using the JS and we need to add CSS to it to make it look presentable.So in the repository we have the folder called blocks inside that we need to create a folder by the name of the block the name that we have given in the first row of the table</li>
+               <li><p>Now we need to rewrite this Dom structure using the JS and we need to add CSS to it to make it look presentable.So in the repository we have the folder called blocks inside that we need to create a folder by the name of the block the name that we have given in the first row of the table.</p></li>
                <div class="image-container">
                <img src="../images/Blocks-In-EDS/github-code.webp" style="width: 20%;  margin-top: 15px;" alt="github-code"/>
                </div>
-               <li>Inside this folder we will create two files one is js and other one is css and names would be cards.js and cards.css for sake of this blog</li>
+               <li><p>Inside this folder we will create two files one is js and other one is css and names would be cards.js and cards.css for sake of this blog.</p></li>
                <div class="image-container">
                <img src="../images/Blocks-In-EDS/cards-files.webp" style="width: 70%;  margin-top: 15px;" alt="cards-files"/>
                </div>
-               <li>Inside the cards.js we will be adding the below logic to make the block presentable you can modify as per your needs and project requirements</li>
+               <li><p>Inside the cards.js we will be adding the below logic to make the block presentable you can modify as per your needs and project requirements.</p></li>
                <div class="image-container">
                <img src="../images/Blocks-In-EDS/jscode.webp" style="width: 70%;  margin-top: 15px;" alt="jscode"/>
                </div>
-               <li>and inside the cards.css we will be adding the below logic</li>
+               <li><p>and inside the cards.css we will be adding the below logic.</p></li>
                <div class="image-container">
                <img src="../images/Blocks-In-EDS/card-css.webp" style="width: 50%;  margin-top: 15px;" alt="card-css"/>
                </div>
@@ -121,7 +121,7 @@
                <img src="../images/Blocks-In-EDS/Added-CSS-and-attribute.webp" style="width: 70%;  margin-top: 15px;" alt="Added-CSS-and-attribute"/>
             </div>
             <p>Now your block is ready you can preview on the page</p>
-            <p>Thanks fo reading 😄</p>
+            <p>Thanks for reading 😄</p>
          </div>
          </div>
          <hr style="margin-top: 30px;"/>
