--- a/blogs/Introduction-to-Document-Based-Authoring.html
+++ b/blogs/Introduction-to-Document-Based-Authoring.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>Blogs | Introduction to Edge Delivery Services</title>
+      <title>Blogs | Introduction to Document Based Authoring</title>
       <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="Welcome to the blog designed for developers new to the Edge delivery service Concepts. In this blog we will walk you through Document Based Authoring concept Document Based Authoring (DBA) in Adobe Experience Manager (AEM) is a content authoring paradigm designed to simplify the creation, management, and delivery of structured content.">
@@ -65,42 +65,42 @@
             </div>
             <p>Now we will be creating a sample website for learning document based authoring. below are the ceartine requirements to create a website:</p>
             <ul class="ff_ul" style="padding: 10px;">
-               <li>GitHub account - you need a github account in this all you code will be kept</li>
-               <li>Google account - for new we are using google docs so we need google account othwise we can use microsoft account as well.</li>
-               <li>You should have basic understanding of HTML, CSS and JavaScript</li>
+               <li><p>GitHub account - you need a github account in this all you code will be kept.</p></li>
+               <li><p>Google account - for new we are using google docs so we need google account othwise we can use microsoft account as well.</p></li>
+               <li><p>You should have basic understanding of HTML, CSS and JavaScript.</p></li>
             </ul>
          </div>
          <div>
             <h3 style="text-align: left;">Steps to create and configure Edge Delivery Services Project</h3>
             <ul class="ff_ul" style="padding: 10px;">
-               <li>Create new repository in your github using this template <a href="https://github.com/adobe/aem-boilerplate" target="_blank">https://github.com/adobe/aem-boilerplate</a></li>
+               <li><p>Create new repository in your github using this template</p><a href="https://github.com/adobe/aem-boilerplate" target="_blank">https://github.com/adobe/aem-boilerplate</a></li>
                <div class="image-container">
                   <img src="../images/Document-Based-Authoring/adobe-template.webp" style="width: 100%;  margin-top: 15px;" alt="adobe-template"/>
                </div>
-               <li>Install the AEM Code Sync GitHub App on your repository.Open the URL <a href="https://github.com/apps/aem-code-sync" target="_blank"> github.com/apps/aem-code-sync </a>in the browser and click on install</li>
+               <li><p>Install the AEM Code Sync GitHub App on your repository.Open the URL</p> <a href="https://github.com/apps/aem-code-sync" target="_blank"> github.com/apps/aem-code-sync </a>in the browser and click on install</li>
                <div class="image-container">
                   <img src="../images/Document-Based-Authoring/aem-code-sync.webp" style="width: 100%;  margin-top: 15px;" alt="aem-code-sync"/>
                </div>
-               <li>Go to the google drive in that create a folder with project name.</li>
+               <li><p>Go to the google drive in that create a folder with project name.</p></li>
                <div class="image-container">
                   <img src="../images/Document-Based-Authoring/folder-creation.webp" style="width: 100%;  margin-top: 15px;" alt="folder-creation-in-google-drive"/>
                </div>
-               <li>Create 3 docs files in the project folder with the name index, nav, footer and give the editor permission to <a href="mailto:helix@adobe.com">helix@adobe.com</a> account and add some content in it.</li>
+               <li><p>Create 3 docs files in the project folder with the name index, nav, footer and give the editor permission to </p><a href="mailto:helix@adobe.com">helix@adobe.com</a> account and add some content in it.</li>
                <div class="image-container">
                   <img src="../images/Document-Based-Authoring/docs-creation-google-drive.webp" style="width: 100%;  margin-top: 15px;" alt="docs-creation-google-drive"/>
                </div>
-               <li>After that go to the github in that there is the file called fstab.yaml in that add the path of your google drive folder and commit that change</li>
+               <li><p>After that go to the github in that there is the file called fstab.yaml in that add the path of your google drive folder and commit that change</p></li>
                <div class="image-container">
                   <img src="../images/Document-Based-Authoring/adding-path-to-git-code.webp" style="width: 100%;  margin-top: 15px;" alt="adding-path-to-git-code"/>
                </div>
-               <li>Now add AEM sidekick extension to your browser then go inside your project folder then in sidekick you will get the option to add project then add the project, now you can preview or publish the pages</li>
+               <li><p>Now add AEM sidekick extension to your browser then go inside your project folder then in sidekick you will get the option to add project then add the project, now you can preview or publish the pages</p></li>
                <div class="image-container">
                   <img src="../images/Document-Based-Authoring/sidekick.webp" style="width: 100%;  margin-top: 15px;" alt="sidekick"/>
                </div>
-               <li>Now there are two urls that you can use to see the pages so create the url you need your branch in which your code is available, your repo name and owner name then for preview and live <span style="color: blue;">.page</span> and <span style="color: blue;">.live</span> extension can be used as shown below</li>
+               <li><p>Now there are two urls that you can use to see the pages so create the url you need your branch in which your code is available, your repo name and owner name then for preview and live </p><span style="color: blue;">.page</span> and <span style="color: blue;">.live</span> extension can be used as shown below</li>
                <ol class="ff_ul">
-                  <li>preview URL -  https://{branch}--{repo}--{owner}.aem.page/</li>
-                  <li>publish URL -  https://{branch}--{repo}--{owner}.aem.live/</li>
+                  <li><p>preview URL -  https://{branch}--{repo}--{owner}.aem.page/</p></li>
+                  <li><p>publish URL -  https://{branch}--{repo}--{owner}.aem.live/</p></li>
                </ol>
                <p>Whenever you hit the url the index page available in that folder will be displayed if index page is not present it will throw <span style="color: red;">404 not found</span> exception</p>
                <p>Below is how your website gonna look for the content of the page you can reffer to the following google drive <a href="https://drive.google.com/drive/u/0/folders/1MGzOt7ubUh3gu7zhZIPb7R7dyRzG371j" target="_blank">GDrive</a></p>
