--- a/blogs/sidekick-customization.html
+++ b/blogs/sidekick-customization.html
@@ -57,7 +57,7 @@
          <div class="blog-items">
          <div>
             <p>Happy to find you here. Welcome to another learning.</p>
-            <h3 style="text-align: left;">What is Sidekick in terma of EDS?</h3>
+            <h3 style="text-align: left;">What is Sidekick in terms of EDS?</h3>
             <p>In the context of AEM Edge Delivery Service (EDS), the term "Sidekick" does not have a defined or standard meaning as it does in classic AEM. However, if you are referencing a "sidekick" in general, it could imply a supportive utility, feature, or tool designed to aid in managing or delivering content efficiently in the edge delivery context.</p>
             <p>In sidekick we can create two types of buttons.</p>
             <div class="image-container">
@@ -80,27 +80,27 @@
             </div>
             <p>In the above image there are some terms will explain that.</p>
             <ul class="ff_ul">
-               <li>id: In this we need to provide id this is main thing as it is useful while creating Action container</li>
-               <li>Title: it is shown on sidekick</li>
-               <li>Environments: here we specify on which environment we wanted to display that button</li>
-               <li>Url: like what action should be performed on the click of that button</li>
-               <li>passConfig: with this property whenever we go the url provided we can see all the information such as repo, owner and branch of our git hub in the url means it passes all the configuration.</li>
+               <li><p>id: In this we need to provide id this is main thing as it is useful while creating Action container</p></li>
+               <li><p>Title: it is shown on sidekick</p></li>
+               <li><p>Environments: here we specify on which environment we wanted to display that button</p></li>
+               <li><p>Url: like what action should be performed on the click of that button</p></li>
+               <li><p>passConfig: with this property whenever we go the url provided we can see all the information such as repo, owner and branch of our git hub in the url means it passes all the configuration.</p></li>
                <div class="image-container">
             <img src="../images/sidekick-customization/passconfig.webp" style="width: 100%;  margin-top: 15px;" alt="passconfig"/>
             </div>
-               <li>passReferrer: by default it is false if not provide, if it is true it will display that from which URL you have came to the current URL as shown below.</li>
+               <li><p>passReferrer: by default it is false if not provide, if it is true it will display that from which URL you have came to the current URL as shown below.</p></li>
                <div class="image-container">
             <img src="../images/sidekick-customization/passReference.webp" style="width: 100%;  margin-top: 15px;" alt="passReference"/>
             </div>
-               <li>excludePaths: This will disable the Action that we have created on that particular pages under that path we have provided.</li>
-               <li>IncludePaths: Here we provide the path on which that Action to be displayed.</li>
+               <li><p>excludePaths: This will disable the Action that we have created on that particular pages under that path we have provided.</p></li>
+               <li><p>IncludePaths: Here we provide the path on which that Action to be displayed.</p></li>
             </ul>
             </ol>
             <p>This is how we customized the sidekick as you can see in the below image buttons have been added.</p>
             <div class="image-container">
             <img src="../images/sidekick-customization/final-sidekick.webp" style="width: 100%;  margin-top: 15px;" alt="final-sidekick"/>
             </div>
-            <p>Thanks fo reading 😄</p>
+            <p>Thanks for reading 😄</p>
          </div>
          </div>
          <hr style="margin-top: 30px;"/>
