blog added Sidekick Library in Edge Delivery Services

--- a/blogs.html
+++ b/blogs.html
@@ -143,6 +143,21 @@
 					</div>
 				</div>
 			</a>
+			<a href="./blogs/Sidekick-Library.html" style="text-decoration: none;" class="blog-item">
+				<div id="eds" class="blog-item-div"
+					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+					<img src="images/Tile EDS.jpg" alt="Card Image" style="width: 100%; height: auto; display: block;">
+					<div style="padding: 16px;">
+						<p class="edsTag"
+							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
+							AEM EDS</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Sidekick Library in Edge Delivery Services">Sidekick Library in Edge Delivery Services</p>
+						</div>
+						<p class="publishDate">January 10, 2025</p>
+					</div>
+				</div>
+			</a>
 			<a href="./blogs/form-rule-editor.html" style="text-decoration: none;" class="blog-item">
 				<div id="forms" class="blog-item-div"
 					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
