blog added Indexing in Edge Delivery Services

--- a/blogs/Sidekick-Library.html
+++ b/blogs/Sidekick-Library.html
@@ -5,7 +5,7 @@
       <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="Welcome to the blog designed for developers new to the Edge delivery service concepts. In this blog we will see how we can create the sidekick library.">
-      <meta name="keywords" content="Infodales, how to add placeholder in EDS, how to implement placeholders in EDS, placeholders in EDS, placeholders in franklin">
+      <meta name="keywords" content="Infodales, how to create sidekick library in aem eds, sidekick library in eds, sidekick library">
       <meta property="og:locale" content="en_US" />
       <meta property="og:type" content="website" />
       <meta property="og:title" content="Blogs | Sidekick Library in Edge Delivery Services" />
