blogs added clientlibs, Experience-fragment, contentFragments and etc-mapping

--- a/blogs.html
+++ b/blogs.html
@@ -248,6 +248,51 @@
 					</div>
 				</div>
 			</a>
+			<a href="./blogs/ContentFragments.html" style="text-decoration: none;" class="blog-item">
+				<div id="sites" class="blog-item-div"
+					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+					<img src="images/Tile Sites.jpg" alt="Card Image" style="width: 100%; height: auto; display: block;">
+					<div style="padding: 16px;">
+						<p class="sitesTag"
+							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
+							AEM Sites</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Content Fragments in AEM">Content Fragments in AEM</p>
+						</div>
+						<p class="publishDate">October 10, 2024</p>
+					</div>
+				</div>
+			</a>
+			<a href="./blogs/etc-mapping.html" style="text-decoration: none;" class="blog-item">
+				<div id="sites" class="blog-item-div"
+					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+					<img src="images/Tile Sites.jpg" alt="Card Image" style="width: 100%; height: auto; display: block;">
+					<div style="padding: 16px;">
+						<p class="sitesTag"
+							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
+							AEM Sites</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="ETC Mapping in AEM">ETC Mapping in AEM</p>
+						</div>
+						<p class="publishDate">October 25, 2024</p>
+					</div>
+				</div>
+			</a>
+			<a href="./blogs/Clientlibs.html" style="text-decoration: none;" class="blog-item">
+				<div id="sites" class="blog-item-div"
+					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+					<img src="images/Tile Sites.jpg" alt="Card Image" style="width: 100%; height: auto; display: block;">
+					<div style="padding: 16px;">
+						<p class="sitesTag"
+							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
+							AEM Sites</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Clientlibs in AEM">Clientlibs in AEM</p>
+						</div>
+						<p class="publishDate">March 01, 2023</p>
+					</div>
+				</div>
+			</a>
 			<a href="./blogs/content-transfer-tool.html" style="text-decoration: none;" class="blog-item">
 				<div id="sites" class="blog-item-div"
 					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
@@ -275,6 +320,21 @@
 							<p class="blog-title" style="font-size: 1em; color: #555;" title="Query Builder in AEM">Query Builder in AEM</p>
 						</div>
 						<p class="publishDate">May 23, 2023</p>
+					</div>
+				</div>
+			</a>
+			<a href="./blogs/ExperienceFragment.html" style="text-decoration: none;" class="blog-item">
+				<div id="sites" class="blog-item-div"
+					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+					<img src="images/Tile Sites.jpg" alt="Card Image" style="width: 100%; height: auto; display: block;">
+					<div style="padding: 16px;">
+						<p class="sitesTag"
+							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
+							AEM Sites</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Experience Fragments in AEM">Experience Fragments in AEM</p>
+						</div>
+						<p class="publishDate">September 30, 2024</p>
 					</div>
 				</div>
 			</a>
